<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text"
            style="@style/Widget.EducationPlatform.EditTextView"
            android:layout_marginTop="16dp"
            android:hint="@string/course_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/info_text"
            style="@style/Widget.EducationPlatform.EditTextView"
            android:layout_marginTop="16dp"
            android:hint="@string/info_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/score_text"
            style="@style/Widget.EducationPlatform.EditTextView"
            android:layout_marginTop="16dp"
            android:hint="@string/score_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_score_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_task_label"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_shape">

            <jp.wasabeef.richeditor.RichEditor
                android:id="@+id/text_editor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" >

            </jp.wasabeef.richeditor.RichEditor>

        </FrameLayout>

        <include
            android:id="@+id/text_editor_menu"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32dp"
            layout="@layout/text_editor_menu"/>

        <TextView
            android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_language_label"/>

        <Spinner
            style="@style/Widget.EducationPlatform.EditTextView"
            android:id="@+id/language_spinner"
            android:layout_marginTop="16dp"
            android:layout_height="48dp"
            android:inputType="none"
            android:background="@drawable/border_shape"
            android:text="@string/course_direction_hint"
            android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout" />

        <TextView
            android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/base_code_label"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_shape">

            <de.markusressel.kodeeditor.library.view.CodeEditorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:ke_divider_color="?android:attr/textColorPrimary"
                app:ke_divider_enabled="true"
                app:ke_editor_backgroundColor="?android:attr/windowBackground"
                app:ke_editor_followCursor="true"
                app:ke_editor_maxZoom="10.0"
                app:ke_lineNumbers_backgroundColor="#ccc"
                app:ke_lineNumbers_textColor="#000"
                app:ke_minimap_borderColor="#000"
                app:ke_minimap_enabled="true"
                app:ke_minimap_indicatorColor="#f00"
                app:ke_minimap_maxDimension="200dp"
                android:layout_margin="10dp"
                android:id="@+id/code_editor"/>
        </FrameLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.EducationPlatform.BodyFirst"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_input_output_label"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_shape">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/test_recycler"
                tools:itemCount="10"/>
        </FrameLayout>

        <Button
            style="@style/Widget.EducationPlatform.PrimaryButton"
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="right"
            android:text="@string/save_button" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>